--- a/rnr.cabal
+++ b/rnr.cabal
@@ -5,7 +5,7 @@ license-file:   LICENSE
 author:         dan corson <danl@alum.mit.edu>
 synopsis:       <syn>
 build-type:     Simple
-build-depends:  base, haskell98
+build-depends:  HDBC, HDBC-postgresql, HSH, base, haskell98, time
 
 executable:     rnr
 main-is:        Main.hs
